--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ logging.level.org.atmosphere = warn
 spring.mustache.check-template-location = false
 
 # Launch the default browser when starting the application in development mode
-vaadin.launch-browser=true
+vaadin.launch-browser=false
 
 # To improve the performance during development.
 # For more information https://vaadin.com/docs/latest/integrations/spring/configuration#special-configuration-parameters
@@ -14,3 +14,5 @@ spring.sql.init.mode = always
 # spring.ai.openai.chat.base-url=http://localhost:11434
 # spring.ai.openai.chat.options.model=mistral-small3.2
 spring.ai.openai.api-key=${OPENAI_API_KEY}
+
+spring.jpa.show-sql=false
